Changing config  MaximumTweetLength to (40 or 45 or 100) just to test and see if the app is able to read this config and apply necessary changes

--- a/Core/Properties/launchSettings.json
+++ b/Core/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Core": {
       "commandName": "Project",
-      "commandLineArgs": "\"@user1 You will need to speak to @user2 about this\""
+      "commandLineArgs": "\"Please visit http://example.org/frequently-asked-questions/account/returns for more information regarding your problem.\""
     }
   }
 }
